<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/offwhite"
    android:layout_height="match_parent"

    tools:context=".Activity.Register_Movie">
    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:padding="50dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/title_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/title_movie_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/title_edt"
                android:inputType="text"
                style="@style/my_EditText_style"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/title_lay"
            android:id="@+id/year_lay"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/year_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/year_edt"
                android:layout_width="match_parent"
                style="@style/my_EditText_style"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/year_lay"
            android:id="@+id/director_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/director_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/director_edt"
                android:layout_width="match_parent"
                style="@style/my_EditText_style"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/director_lay"
            android:id="@+id/actors_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/actor_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actors_edt"
                android:layout_width="match_parent"
                style="@style/my_EditText_style"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/actors_lay"
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/rating_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rating_edt"
                style="@style/my_EditText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionNext"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/rating"
            android:id="@+id/review_lay"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/review_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/review_edt"
                android:layout_width="match_parent"
                style="@style/my_EditText_style"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/save"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/background_shape_button_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_lay">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>